testing/src/java7srclisting/errors/ErrorV12.java
package java7srclisting.errors;

public class ErrorV12 {

    private static @interface Test {
        // Hello
    }

}
